added jumbotron for city display

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 <main>
     <section class="wrapper">
         <div class="row m-2">
-            <div class="card" style="width: 18rem;">
+            <div class="card custom-card bg-transparent" style="width: 18rem;">
+                <h2 class="text-center">Search For a City:</h1>
                 <div class="button-div">
                     <input type="text" placeholder="Find a City" id="search" class="p-1 m-1 bg-dark text-light">
                     <button type="submit" class="m-1 bg-primary rounded">Search</button>
@@ -28,6 +29,13 @@
                     <li class="list-group-item">Vestibulum at eros</li>
                 </ul>
             </div>
+        </div>
+        <div class="jumbotron custom-jumbotron">
+            <h1 class="display-4">Hello, world!</h1>
+            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <hr class="my-4">
+            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
         </div>
     </section>
     
