updated fetch function

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="card custom-card bg-transparent" style="width: 18rem;">
                 <h2 class="text-center">Search For a City:</h1>
                 <div class="button-div">
-                    <input type="text" placeholder="Find a City" id="search" class="p-1 m-1 bg-dark text-light">
+                    <input type="text" placeholder="Find a City" id="city" class="p-1 m-1 bg-dark text-light">
                     <button type="submit" class="m-1 bg-primary rounded" id="search">Search</button>
                 </div>
                 <ul class="list-group list-group-flush" id="city-list"></ul>
