added for each loop to save searched cities

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <input type="text" placeholder="Find a City" id="city" class="p-1 m-1 bg-dark text-light">
                     <button type="submit" class="m-1 bg-primary rounded" id="search">Search</button>
                 </div>
-                <ul class="list-group list-group-flush" id="city-list"></ul>
+                <ul class="list-group list-group-flush cities-list" id="city-list"></ul>
             </div>
         </section>
         <!--City Weather Stats-->
