added for loop to sort through api data

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
         <!--City Weather Stats-->
         <section class="col d-flex flex-wrap custom-div">
             <div class="card bg-dark text-white custom-jumbotron">
+                <h2 class="text-light">Your Current Weather</h2>
                 <div class="card-img-overlay">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title" id="city-name"></h5>
+                  <p class="card-text">Temp:<span id="temp"></span></p>
                   <p class="card-text">Last updated 3 mins ago</p>
                 </div>
               </div>
