added uv-index variable

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="card-img-overlay">
                   <h5 class="card-title" id="city-name"></h5>
                   <p class="card-text">Temp:<span id="temp"></span></p>
-                  <p class="card-text">Last updated 3 mins ago</p>
+                  <p class="card-text">UV-Index:<span id="uv-index"></span></p>
                 </div>
               </div>
             <!--5 Day Forecast Area-->
