changed current weather card HTML

--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
     
 <section class="col d-flex flex-wrap custom-div">
     <section class="card bg-dark text-white custom-jumbotron bg-transparent">
-      <h2 class="text-light">Your Current Weather</h2>
       <div class="card-img-overlay">
-          <h5 class="card-title" id="city-name"></h5>
-          <p class="card-text" id="temp"></p>
-          <p class="card-text" id="uv-index"></p>
+        <h2 class="text-light text-center">Your Current Weather</h2>
+          <ul>
+            <li class="list-group-item" id="city-name"></li>
+            <li class="list-group-item" id="temp"></li>
+            <li class="list-group-item" id="uv-index"></p>
+          </ul>
       </div>
     </section>
 
