--- a/index.html
+++ b/index.html
@@ -25,12 +25,10 @@
             <input type="text" placeholder="Find a City" id="city" class="p-1 m-1 bg-dark text-light">
             <button type="submit" class="m-1 bg-primary rounded custom-button" id="search">Search</button>
           </div>
-          <div class="row">
-            <div class="row">
-              <h3 class="my-2">Previously Viewed:</h3>
-              <ul class="cities-list mx-3" id="city-list"></ul>
-              <button class="bg-primary rounded custom-button2" id="clear-button">Clear Viewed</button>
-            </div>
+          <div class="row align-items-center justify-content-between">
+            <h3 class="my-2">Previously Viewed:</h3>
+            <ul class="cities-list mx-3" id="city-list"></ul>
+            <button class="bg-primary rounded custom-button2" id="clear-button">Clear Previously Viewed</button>
           </div>
         </section>
     </header>
