fixed console error with missing JPG

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 
 <!--Background Video-->
-<video playsinline autoplay muted loop poster="cake.jpg">
-    <source src="./assets/images/Star Citizen Live Wallpaper HD.mp4" type="video/webm">
+<video playsinline autoplay muted loop>
+    <source src="./assets/images/background.mp4" type="video/webm">
     Your browser does not support the video tag.
 </video>
 
