changed styling, fixed wind/humidty not displaying

--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
       <div class="card-img-overlay">
         <h2 class="text-light text-center">Your Current Weather</h2>
           <ul class="city-stats-list">
-            <li class="city-name" id="city-name"></li>
-            <li class="" id="temp"></li>
-            <li class="" id="uv-index"></li>
+            <li class="city-name mx-1 neon" id="city-name"></li>
+            <li class="mx-1 neon" id="temp"></li>
+            <li class="mx-1 neon" id="wind"></li>
+            <li class="mx-1 neon" id="humidity"></li>
+            <li class="mx-1 neon" id="pressure"></li>
+            <li class="mx-1 neon" id="uv-index"></li>
           </ul>
       </div>
     </section>
@@ -57,11 +60,11 @@
         <!--Weather Cards-->
         <div class="card bg-transparent neon-card" style="width: 13rem;">
             <ul class="list-group bg-transparent list-group-flush">
-              <li class="list-group-item bg-transparent neon">Cras justo odio</li>
-              <li class="list-group-item bg-transparent neon">Cras justo odio</li>
-              <li class="list-group-item bg-transparent neon">Dapibus ac facilisis in</li>
-              <li class="list-group-item bg-transparent neon">Vestibulum at eros</li>
-              <li class="list-group-item bg-transparent neon">Vestibulum at eros</li>
+              <li class="list-group-item bg-transparent neon"></li>
+              <li class="list-group-item bg-transparent neon"></li>
+              <li class="list-group-item bg-transparent neon"></li>
+              <li class="list-group-item bg-transparent neon"></li>
+              <li class="list-group-item bg-transparent neon"></li>
             </ul>
         </div>
 
@@ -69,44 +72,44 @@
 
         <div class="card bg-transparent neon-card" style="width: 13rem;">
             <ul class="list-group bg-transparent list-group-flush">
-              <li class="list-group-item bg-transparent neon">Cras justo odio</li>
-              <li class="list-group-item bg-transparent neon">Cras justo odio</li>
-              <li class="list-group-item bg-transparent neon">Dapibus ac facilisis in</li>
-              <li class="list-group-item bg-transparent neon">Vestibulum at eros</li>
-              <li class="list-group-item bg-transparent neon">Vestibulum at eros</li>
+              <li class="list-group-item bg-transparent neon"></li>
+              <li class="list-group-item bg-transparent neon"></li>
+              <li class="list-group-item bg-transparent neon"></li>
+              <li class="list-group-item bg-transparent neon"></li>
+              <li class="list-group-item bg-transparent neon"></li>
             </ul>
         </div>
 
 
         <div class="card bg-transparent neon-card" style="width: 13rem;">
            <ul class="list-group bg-transparent list-group-flush">
-             <li class="list-group-item bg-transparent neon">Cras justo odio</li>
-             <li class="list-group-item bg-transparent neon">Cras justo odio</li>
-             <li class="list-group-item bg-transparent neon">Dapibus ac facilisis in</li>
-             <li class="list-group-item bg-transparent neon">Vestibulum at eros</li>
-             <li class="list-group-item bg-transparent neon">Vestibulum at eros</li>
+             <li class="list-group-item bg-transparent neon"></li>
+             <li class="list-group-item bg-transparent neon"></li>
+             <li class="list-group-item bg-transparent neon"></li>
+             <li class="list-group-item bg-transparent neon"></li>
+             <li class="list-group-item bg-transparent neon"></li>
           </ul>
         </div>
 
 
         <div class="card bg-transparent neon-card" style="width: 13rem;">
            <ul class="list-group bg-transparent list-group-flush">
-             <li class="list-group-item bg-transparent neon">Cras justo odio</li>
-             <li class="list-group-item bg-transparent neon">Cras justo odio</li>
-             <li class="list-group-item bg-transparent neon">Dapibus ac facilisis in</li>
-             <li class="list-group-item bg-transparent neon">Vestibulum at eros</li>
-             <li class="list-group-item bg-transparent neon">Vestibulum at eros</li>
+             <li class="list-group-item bg-transparent neon"></li>
+             <li class="list-group-item bg-transparent neon"></li>
+             <li class="list-group-item bg-transparent neon"></li>
+             <li class="list-group-item bg-transparent neon"></li>
+             <li class="list-group-item bg-transparent neon"></li>
            </ul>
         </div>
 
 
         <div class="card bg-transparent neon-card" style="width: 13rem;">
            <ul class="list-group bg-transparent list-group-flush">
-             <li class="list-group-item bg-transparent neon">Cras justo odio</li>
-             <li class="list-group-item bg-transparent neon">Cras justo odio</li>
-             <li class="list-group-item bg-transparent neon">Dapibus ac facilisis in</li>
-             <li class="list-group-item bg-transparent neon">Vestibulum at eros</li>
-             <li class="list-group-item bg-transparent neon">Vestibulum at eros</li>
+             <li class="list-group-item bg-transparent neon"></li>
+             <li class="list-group-item bg-transparent neon"></li>
+             <li class="list-group-item bg-transparent neon"></li>
+             <li class="list-group-item bg-transparent neon"></li>
+             <li class="list-group-item bg-transparent neon"></li>
            </ul>
         </div>
       </div>
