--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
         <!--Weather Cards-->
         <div class="card bg-transparent neon-card" style="width: 13rem;">
             <ul class="list-group bg-transparent list-group-flush">
-              <li class="list-group-item bg-transparent neon"></li>
-              <li class="list-group-item bg-transparent neon"></li>
-              <li class="list-group-item bg-transparent neon"></li>
-              <li class="list-group-item bg-transparent neon"></li>
-              <li class="list-group-item bg-transparent neon"></li>
+              <li class="list-group-item item1 bg-transparent neon" id="date-0"></li>
+              <li class="list-group-item bg-transparent neon" id="icon-0"></li>
+              <li class="list-group-item bg-transparent neon" id="temp-0"></li>
+              <li class="list-group-item bg-transparent neon" id="wind-0"></li>
+              <li class="list-group-item bg-transparent neon" id="himidity-0"></li>
             </ul>
         </div>
 
@@ -71,44 +71,44 @@
 
         <div class="card bg-transparent neon-card" style="width: 13rem;">
             <ul class="list-group bg-transparent list-group-flush">
-              <li class="list-group-item bg-transparent neon"></li>
-              <li class="list-group-item bg-transparent neon"></li>
-              <li class="list-group-item bg-transparent neon"></li>
-              <li class="list-group-item bg-transparent neon"></li>
-              <li class="list-group-item bg-transparent neon"></li>
+              <li class="list-group-item item1 bg-transparent neon" id="date-1"></li>
+              <li class="list-group-item bg-transparent neon" id="icon-1"></li>
+              <li class="list-group-item bg-transparent neon" id="temp-1"></li>
+              <li class="list-group-item bg-transparent neon" id="wind-1"></li>
+              <li class="list-group-item bg-transparent neon" id="himidity-0"></li>
             </ul>
         </div>
 
 
         <div class="card bg-transparent neon-card" style="width: 13rem;">
            <ul class="list-group bg-transparent list-group-flush">
-             <li class="list-group-item bg-transparent neon"></li>
-             <li class="list-group-item bg-transparent neon"></li>
-             <li class="list-group-item bg-transparent neon"></li>
-             <li class="list-group-item bg-transparent neon"></li>
-             <li class="list-group-item bg-transparent neon"></li>
+             <li class="list-group-item item1 bg-transparent neon" id="date-2"></li>
+             <li class="list-group-item bg-transparent neon" id="icon-2"></li>
+             <li class="list-group-item bg-transparent neon" id="temp-2"></li>
+             <li class="list-group-item bg-transparent neon" id="wind-2"></li>
+             <li class="list-group-item bg-transparent neon" id="himidity-2"></li>
           </ul>
         </div>
 
 
         <div class="card bg-transparent neon-card" style="width: 13rem;">
            <ul class="list-group bg-transparent list-group-flush">
-             <li class="list-group-item bg-transparent neon"></li>
-             <li class="list-group-item bg-transparent neon"></li>
-             <li class="list-group-item bg-transparent neon"></li>
-             <li class="list-group-item bg-transparent neon"></li>
-             <li class="list-group-item bg-transparent neon"></li>
+             <li class="list-group-item item1 bg-transparent neon" id="date-3"></li>
+             <li class="list-group-item bg-transparent neon" id="icon-3"></li>
+             <li class="list-group-item bg-transparent neon" id="temp-3"></li>
+             <li class="list-group-item bg-transparent neon" id="wind-3"></li>
+             <li class="list-group-item bg-transparent neon" id="himidity-3"></li>
            </ul>
         </div>
 
 
         <div class="card bg-transparent neon-card" style="width: 13rem;">
            <ul class="list-group bg-transparent list-group-flush">
-             <li class="list-group-item bg-transparent neon"></li>
-             <li class="list-group-item bg-transparent neon"></li>
-             <li class="list-group-item bg-transparent neon"></li>
-             <li class="list-group-item bg-transparent neon"></li>
-             <li class="list-group-item bg-transparent neon"></li>
+             <li class="list-group-item item1 bg-transparent neon" id="date-4"></li>
+             <li class="list-group-item bg-transparent neon" id="icon-4"></li>
+             <li class="list-group-item bg-transparent neon" id="temp-4"></li>
+             <li class="list-group-item bg-transparent neon" id="wind-4"></li>
+             <li class="list-group-item bg-transparent neon" id="himidity-4"></li>
            </ul>
         </div>
       </div>
