--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge" />
         <link rel="stylesheet" href="./assets/style.css"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Weather Dashboard</title>
     </head>
 
@@ -59,59 +60,58 @@
         <!--Weather Cards-->
         <div class="card bg-transparent neon-card" style="width: 13rem;">
             <ul class="list-group bg-transparent list-group-flush">
-              <li class="list-group-item item1 bg-transparent neon" id="date-0"></li>
-              <li class="list-group-item bg-transparent neon" id="icon-0"></li>
-              <li class="list-group-item bg-transparent neon" id="temp-0"></li>
-              <li class="list-group-item bg-transparent neon" id="wind-0"></li>
-              <li class="list-group-item bg-transparent neon" id="himidity-0"></li>
+              <li class="list-group-item item-1 bg-transparent neon"></li>
+              <li class="list-group-item item-2 bg-transparent neon"></li>
+              <li class="list-group-item item-3 bg-transparent neon"></li>
+              <li class="list-group-item item-4 bg-transparent neon"></li>
+              <li class="list-group-item item-5 bg-transparent neon"></li>
             </ul>
         </div>
 
           
 
         <div class="card bg-transparent neon-card" style="width: 13rem;">
-            <ul class="list-group bg-transparent list-group-flush">
-              <li class="list-group-item item1 bg-transparent neon" id="date-1"></li>
-              <li class="list-group-item bg-transparent neon" id="icon-1"></li>
-              <li class="list-group-item bg-transparent neon" id="temp-1"></li>
-              <li class="list-group-item bg-transparent neon" id="wind-1"></li>
-              <li class="list-group-item bg-transparent neon" id="himidity-0"></li>
-            </ul>
-        </div>
-
-
-        <div class="card bg-transparent neon-card" style="width: 13rem;">
-           <ul class="list-group bg-transparent list-group-flush">
-             <li class="list-group-item item1 bg-transparent neon" id="date-2"></li>
-             <li class="list-group-item bg-transparent neon" id="icon-2"></li>
-             <li class="list-group-item bg-transparent neon" id="temp-2"></li>
-             <li class="list-group-item bg-transparent neon" id="wind-2"></li>
-             <li class="list-group-item bg-transparent neon" id="himidity-2"></li>
+          <ul class="list-group bg-transparent list-group-flush">
+            <li class="list-group-item item-1 bg-transparent neon"></li>
+            <li class="list-group-item item-2 bg-transparent neon"></li>
+            <li class="list-group-item item-3 bg-transparent neon"></li>
+            <li class="list-group-item item-4 bg-transparent neon"></li>
+            <li class="list-group-item item-5 bg-transparent neon"></li>
           </ul>
-        </div>
-
-
-        <div class="card bg-transparent neon-card" style="width: 13rem;">
-           <ul class="list-group bg-transparent list-group-flush">
-             <li class="list-group-item item1 bg-transparent neon" id="date-3"></li>
-             <li class="list-group-item bg-transparent neon" id="icon-3"></li>
-             <li class="list-group-item bg-transparent neon" id="temp-3"></li>
-             <li class="list-group-item bg-transparent neon" id="wind-3"></li>
-             <li class="list-group-item bg-transparent neon" id="himidity-3"></li>
-           </ul>
-        </div>
-
-
-        <div class="card bg-transparent neon-card" style="width: 13rem;">
-           <ul class="list-group bg-transparent list-group-flush">
-             <li class="list-group-item item1 bg-transparent neon" id="date-4"></li>
-             <li class="list-group-item bg-transparent neon" id="icon-4"></li>
-             <li class="list-group-item bg-transparent neon" id="temp-4"></li>
-             <li class="list-group-item bg-transparent neon" id="wind-4"></li>
-             <li class="list-group-item bg-transparent neon" id="himidity-4"></li>
-           </ul>
-        </div>
       </div>
+
+
+      <div class="card bg-transparent neon-card" style="width: 13rem;">
+        <ul class="list-group bg-transparent list-group-flush">
+          <li class="list-group-item item-1 bg-transparent neon"></li>
+          <li class="list-group-item item-2 bg-transparent neon"></li>
+          <li class="list-group-item item-3 bg-transparent neon"></li>
+          <li class="list-group-item item-4 bg-transparent neon"></li>
+          <li class="list-group-item item-5 bg-transparent neon"></li>
+        </ul>
+    </div>
+
+
+    <div class="card bg-transparent neon-card" style="width: 13rem;">
+      <ul class="list-group bg-transparent list-group-flush">
+        <li class="list-group-item item-1 bg-transparent neon"></li>
+        <li class="list-group-item item-2 bg-transparent neon"></li>
+        <li class="list-group-item item-3 bg-transparent neon"></li>
+        <li class="list-group-item item-4 bg-transparent neon"></li>
+        <li class="list-group-item item-5 bg-transparent neon"></li>
+      </ul>
+  </div>
+
+
+  <div class="card bg-transparent neon-card" style="width: 13rem;">
+    <ul class="list-group bg-transparent list-group-flush">
+      <li class="list-group-item item-1 bg-transparent neon"></li>
+      <li class="list-group-item item-2 bg-transparent neon"></li>
+      <li class="list-group-item item-3 bg-transparent neon"></li>
+      <li class="list-group-item item-4 bg-transparent neon"></li>
+      <li class="list-group-item item-5 bg-transparent neon"></li>
+    </ul>
+</div>
 
 
   </section>
