--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <!--Background Video-->
-  <video playsinline autoplay muted loop>
+  <video class="video-1"playsinline autoplay muted loop>
     <source src="./assets/images/background.mp4" type="video/webm">
     Your browser does not support the video tag.
   </video>
