--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li class="mx-1 neon" id="temp"></li>
             <li class="mx-1 neon" id="wind"></li>
             <li class="mx-1 neon" id="humidity"></li>
-            <li class="mx-1 neon" id="uv-index"></li>
+            <li class="mx-1 font-weight-bolder neon" id="uv-index"></li>
           </ul>
         </div>
       </section>
