fixed saved cities button. No errros and now loads desired city, added bg to cards

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
           <!--Weather Cards-->
           <div class="card bg-transparent neon-card" style="width: 13rem;">
-            <ul class="list-group bg-transparent list-group-flush">
+            <ul class="list-group bg-dark list-group-flush">
               <li class="list-group-item item-1 bg-transparent neon"></li>
               <li class="list-group-item item-2 bg-transparent neon"></li>
               <li class="list-group-item item-3 bg-transparent neon"></li>
@@ -78,7 +78,7 @@
 
 
           <div class="card bg-transparent neon-card" style="width: 13rem;">
-            <ul class="list-group bg-transparent list-group-flush">
+            <ul class="list-group bg-dark list-group-flush">
               <li class="list-group-item item-1 bg-transparent neon"></li>
               <li class="list-group-item item-2 bg-transparent neon"></li>
               <li class="list-group-item item-3 bg-transparent neon"></li>
@@ -89,7 +89,7 @@
 
 
           <div class="card bg-transparent neon-card" style="width: 13rem;">
-            <ul class="list-group bg-transparent list-group-flush">
+            <ul class="list-group bg-dark list-group-flush">
               <li class="list-group-item item-1 bg-transparent neon"></li>
               <li class="list-group-item item-2 bg-transparent neon"></li>
               <li class="list-group-item item-3 bg-transparent neon"></li>
@@ -100,7 +100,7 @@
 
 
           <div class="card bg-transparent neon-card" style="width: 13rem;">
-            <ul class="list-group bg-transparent list-group-flush">
+            <ul class="list-group bg-dark list-group-flush">
               <li class="list-group-item item-1 bg-transparent neon"></li>
               <li class="list-group-item item-2 bg-transparent neon"></li>
               <li class="list-group-item item-3 bg-transparent neon"></li>
@@ -111,7 +111,7 @@
 
 
           <div class="card bg-transparent neon-card" style="width: 13rem;">
-            <ul class="list-group bg-transparent list-group-flush">
+            <ul class="list-group bg-dark list-group-flush">
               <li class="list-group-item item-1 bg-transparent neon"></li>
               <li class="list-group-item item-2 bg-transparent neon"></li>
               <li class="list-group-item item-3 bg-transparent neon"></li>
