polished the readme file

--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
         <button type="submit" class="m-1 bg-primary rounded custom-button" id="search">Search</button>
       </div>
       <div class="row align-items-center justify-content-between">
-        <h3 class="my-2">Previously Viewed:</h3>
-        <ul class="cities-list mx-3" id="city-list"></ul>
-        <button class="bg-primary rounded custom-button2" id="clear-button">Clear Previously Viewed</button>
+        <div class="row">
+          <h3 class="my-2">Previously Viewed:</h3>
+          <ul class="cities-list mx-3" id="city-list"></ul>
+        </div>
+        <div>
+          <button class="bg-primary rounded custom-button2" id="clear-button">Clear Previously Viewed</button>
+        </div>
       </div>
     </section>
   </header>
